force-app/main/default/objects/JMS_Campaign_Target_Staging__c/JMS_Campaign_Target_Staging__c.object-meta.xml
<CustomObject>
    <label>Campaign Target Staging</label>
    <nameField>
        <label>Campaign Member Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaign Targets Stagings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>