force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>JMS_Account_Formula__c</fullName>
    <formula>IF( ISBLANK(  JMS_Account_SF_Id__c  ) , &apos;&apos;,HYPERLINK( JMS_Account_SF_Id__c  ,  JMS_Operator_Name__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>