force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Account_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Account_SF_Id__c</fullName>
    <description>Id of Account</description>
    <label>Account SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>