force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Broker_Call_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Call_Error_Message__c</fullName>
    <label>Broker Call Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>