force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Broker_Call_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Broker_Call_SF_Id__c</fullName>
    <label>Broker Call SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>