force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Campaign_Formula__c.field-meta.xml
<CustomField>
    <fullName>JMS_Campaign_Formula__c</fullName>
    <formula>IF( ISBLANK(   JMS_Campaign_SF_Id__c   ) , &apos;&apos;,HYPERLINK(JMS_Campaign_SF_Id__c , JMS_Campaign_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>