force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Campaign_ID__c</fullName>
    <description>Campaign ID</description>
    <label>Campaign ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>