force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Campaign_Target_Batch_Job__c.field-meta.xml
<CustomField>
    <fullName>JMS_Campaign_Target_Batch_Job__c</fullName>
    <label>Campaign Target Batch Job</label>
    <length>255</length>
    <type>Text</type>
</CustomField>