force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Campaign_Target_ID__c.field-meta.xml
<CustomField>
    <fullName>JMS_Campaign_Target_ID__c</fullName>
    <description>Campaign Target ID</description>
    <externalId>true</externalId>
    <label>Campaign Target ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>