force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Company_Country__c.field-meta.xml
<CustomField>
    <fullName>JMS_Company_Country__c</fullName>
    <description>Company Country</description>
    <label>Company Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>