force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Competitor_Name__c</fullName>
    <description>Competitor Name</description>
    <label>Competitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>