force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Concatenation__c.field-meta.xml
<CustomField>
    <fullName>JMS_Concatenation__c</fullName>
    <label>Concatenation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>