force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Contact_Formula__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_Formula__c</fullName>
    <formula>IF( ISBLANK( JMS_Contact_SF_Id__c ) , &apos;&apos;,HYPERLINK( JMS_Contact_SF_Id__c  ,   JMS_Operator_Contact_First_Name__c  &amp; &apos; &apos; &amp; JMS_Operator_Contact_Last_Name__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact</label>
    <type>Text</type>
</CustomField>