force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Contact_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Contact_SF_Id__c</fullName>
    <description>id of contact</description>
    <label>Contact SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>