force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_FireFlyId__c.field-meta.xml
<CustomField>
    <fullName>JMS_FireFlyId__c</fullName>
    <description>FireFlyId</description>
    <label>FireFlyId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>