force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Intended_For__c.field-meta.xml
<CustomField>
    <fullName>JMS_Intended_For__c</fullName>
    <description>Intended For</description>
    <label>Intended For</label>
    <length>255</length>
    <type>Text</type>
</CustomField>