force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Kickout_Failed_Reason__c.field-meta.xml
<CustomField>
    <fullName>JMS_Kickout_Failed_Reason__c</fullName>
    <label>Kickout Failed Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>