force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Kickout_Location__c.field-meta.xml
<CustomField>
    <fullName>JMS_Kickout_Location__c</fullName>
    <label>Kickout Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
                <default>true</default>
                <label>Salesforce</label>
            </value>
            <value>
                <fullName>AWS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>