force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Operator_Address__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Address__c</fullName>
    <description>Operator Address</description>
    <label>Operator Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>