force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Operator_Contact_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Contact_Full_Name__c</fullName>
    <description>Operator Contact Full Name</description>
    <label>Operator Contact Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>