force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Operator_Contact_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Contact_Phone_Number__c</fullName>
    <description>Operator Contact Phone Number</description>
    <label>Operator Contact Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>