force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Operator_Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Contact_Title__c</fullName>
    <description>Operator Contact Title</description>
    <label>Operator Contact Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>