force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Operator_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>JMS_Operator_Error_Message__c</fullName>
    <label>Operator Error Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>