force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Opportunity_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_Error_Message__c</fullName>
    <label>Opportunity Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>