force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Opportunity_Formula__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_Formula__c</fullName>
    <formula>IF( ISBLANK( JMS_Opportunity_SF_Id__c ) , &apos;&apos;,HYPERLINK( JMS_Opportunity_SF_Id__c  , JMS_Campaign_Name__c &amp;&apos; - &apos;&amp; JMS_Operator_Name__c  ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity</label>
    <type>Text</type>
</CustomField>