force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Opportunity_Product_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Opportunity_Product_SF_Id__c</fullName>
    <label>Opportunity Product SF Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>