force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>JMS_Product_Description__c</fullName>
    <description>Product Description</description>
    <label>Product Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>