force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Product_Formula__c.field-meta.xml
<CustomField>
    <fullName>JMS_Product_Formula__c</fullName>
    <formula>IF( ISBLANK(  JMS_Product_SF_Id__c  ) , &apos;&apos;,HYPERLINK( JMS_Product_SF_Id__c  ,  JMS_Smucker_SKU__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>