force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Product_SF_Id__c.field-meta.xml
<CustomField>
    <fullName>JMS_Product_SF_Id__c</fullName>
    <label>Product SF Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>