force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Record_Processed__c.field-meta.xml
<CustomField>
    <fullName>JMS_Record_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Processed</label>
    <type>Checkbox</type>
</CustomField>