force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Sales_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>JMS_Sales_Person_Email__c</fullName>
    <description>Sales Person Email</description>
    <label>Sales Person Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>