force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Smucker_SKU__c.field-meta.xml
<CustomField>
    <fullName>JMS_Smucker_SKU__c</fullName>
    <description>Smucker SKU #</description>
    <label>Smucker SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>