force-app/main/default/objects/JMS_Campaign_Target_Staging__c/fields/JMS_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>JMS_Unique_Key__c</fullName>
    <description>Unique Key</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>