force-app/main/default/objects/JMS_Campaign_Target_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>JMS_Campaign_Formula__c</columns>
    <columns>JMS_Operator_Name__c</columns>
    <columns>JMS_Kickout_Failed_Reason__c</columns>
    <columns>JMS_Record_Processed__c</columns>
    <columns>JMS_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>JMS_Account_SF_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>